--- a/BookMarket/.project
+++ b/BookMarket/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.market.member</name>
+	<name>BookMarket</name>
 	<comment></comment>
 	<projects>
 	</projects>
